# tespy

./: .appveyor.yml  .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  .pep8speaks.yml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README.rst  VERSION  announcement.html  bash.exe.stackdump  fluid_properties_fiddling.py  linkcheck.sh  new_fluid_property_tests.py  nose.cfg  paper.bib  paper.md  pyproject.toml  refrigeration_sim.py  requirements_rtd.py  requirements_rtd.txt  rtd_requirements  setup.cfg  setup.py  sorption_reference.py  template_usage.py  test_absorber.py  test_desorber.py  test_libr.py  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  packaging.yml  tox_checks.yml  tox_pytest.yml
ci/: bootstrap.py  generate_tespy_data_module.py
ci/templates/: .appveyor.yml  .travis.yml  tox.ini
doc/: api.rst  combustion_chamber.rst  conf.py  developing_tespy.rst  first_steps.rst  getting_started.rst  heat_pump.rst  index.rst  installation.rst  introduction.rst  references.bib  tespy_modules.rst  tutorial.rst  tutorials_examples.rst  using_tespy.rst  whats_new.rst  whatsnew.rst  zliterature.rst
doc/api/: tespy.components.rst  tespy.data.rst  tespy.networks.rst  tespy.rst  tespy.tools.rst
doc/getting_started/: basic.rst  ccbp.rst  chp.rst  cogeneration_unit.rst  combustion_engine.rst  district_heating.rst  heat_pump.rst  solar_collector.rst  tutorial_combustion_chamber.rst  tutorial_heat_pump.rst
doc/tespy_modules/: characteristics.rst  components.rst  connections.rst  fluid_properties.rst  networks.rst  subsystems.rst
doc/tutorials_examples/: ccbp.rst  chp.rst  clausius_rankine.rst  clausius_rankine_chp.rst  combined_cycle_chp.rst  combustion_engine.rst  district_heating.rst  solar_collector.rst  tutorial_combustion_chamber.rst  tutorial_heat_pump.rst
doc/using_tespy/: characteristics.rst  components.rst  connections.rst  intro.rst  networks.rst  other.rst  subsystems.rst
doc/whats_new/: v0-0-1.rst  v0-0-2.rst  v0-0-3.rst  v0-0-4.rst  v0-0-5.rst  v0-1-0.rst  v0-1-1.rst  v0-1-2.rst  v0-1-3.rst  v0-1-4.rst  v0-2-0.rst  v0-2-1.rst  v0-2-2.rst  v0-2-3.rst  v0-3-0.rst
doc/whatsnew/: v0.0.1  v0.0.2
docs/: Makefile  advanced_features.rst  advanced_tutorials.rst  api.rst  basic_tutorials.rst  basics.rst  benchmarks.rst  building_blocks.rst  community.rst  conf.py  contents.rst  developing_tespy.rst  documentation.rst  examples.rst  examples_benchmarks.rst  first_steps.rst  getting_started.rst  how.rst  index.rst  installation.rst  integration.rst  introduction.rst  knowledge_center.rst  landing.rst  make.bat  modules.rst  references.bib  regular_meeting.ics  regular_meeting.rst  requirements.txt  support.rst  tespy_analyses.rst  tespy_modules.rst  tutorials.rst  tutorials_examples.rst  whats_new.rst  zliterature.rst
docs/advanced/: exergy.rst  optimization.rst
docs/advanced_features/: characteristics.rst  custom_components.rst  exergy.rst  fluid_properties.rst  ude.rst
docs/advanced_tutorials/: custom_component.rst  debugging.ipynb  develop_components.rst  district_heating.rst  heat_exchangers.ipynb  heat_exchangers.rst  heat_pump_exergy.rst  heat_pump_steps.rst  hrsg_process_steam.rst  humid_air.ipynb  powerconnections.rst  starting_values.rst
docs/analyses/: exergy.rst
docs/api/: components.rst  connections.rst  data.rst  modules.rst  networks.rst  tespy.components.rst  tespy.connections.rst  tespy.data.rst  tespy.networks.rst  tespy.tools.rst  tools.rst
docs/basic_tutorials/: district_heating.rst  gas_turbine.rst  heat_pump.rst  intro.rst  rankine_cycle.rst
docs/basics/: district_heating.rst  gas_turbine.rst  heat_pump.rst  intro.rst  rankine_cycle.rst
docs/building_blocks/: components.rst  connections.rst  fluprodia.rst  networks.rst  subsystems.rst
docs/community/: community.rst  contribute.rst  support.rst
docs/dev_examples/: new_comp.rst
docs/development/: how.rst  new_comp.rst  what.rst
docs/examples/: applications.rst  benchmarks.rst
docs/getting_started/: basic_tutorials.rst  installation.rst  introduction.rst
docs/integration/: model_coupling.rst  optimization.rst  workflows.ipynb
docs/knowledge_center/: best_practices.rst  educational_resources.rst  faq.rst
examples/: CHP.py  chp.py  combustion_chamber.py  combustion_chamber_stoich.py  custom_vars.py  right_pre_design_comps.csv  right_pre_design_results.csv  simple_clausius_rankine.py  simple_cr.py  simple_cr_design_comps.csv  simple_cr_design_results.csv  simple_cr_offdesign_comps.csv  simple_cr_offdesign_results.csv  solar_collector.py
fluid_properties/: __init__.py  functions.py  helpers.py  mixtures.py  wrappers.py
incompressiblesTests/: Ex1.py  Ex1EEMAP_ref.csv  Ex1tespy070.csv  Ex4.py  Ex4EEMAP_ref.csv  Ex4tespy070.csv  Ex8.py  Ex8tespy070_1.csv  Ex9.py  Ex9EEMAP_ref.csv  Ex9tespy070.csv  diff.ipynb
intermediate-food-tests/: boiler+press+decanter+cent+steamIsMixed+thicken+mergeliquid+drier.py  boiler+press+decanter+cent+steamIsMixed+thicken+mergeliquid.py
intermediateFoodTests/: Ex1.py  Ex1tespy070.csv  Ex4.py  Ex4tespy070.csv  Ex8.py  Ex8EEMAP_ref_2.csv  Ex8tespy070_2.csv  Ex9.py  Ex9tespy070.csv  diff.ipynb  energy-supply_energy-merge3.py  energy-supply_energy-split3.py  energy-supply_loss-model3.py
pyte/: __init__.py  connections.py  helpers.py  networks.py
report/: report.tex
tespy/: Q100.py  __init__.py  connections.py  csv_reader.py  helpers.py  logger.py  network_reader.py  networks.py
tests/: CGAM_Sankey_Test.py  ExergyBalance_CGAM.py  component_tests.py  dh_subsystem_tests.py  districtHeatingPipeTests.py  error_tests.py  fluid_property_tests.py  heat_pump_test.py  network_tests.py  test_advanced_tutorials.py  test_basic_tutorials.py  test_busses.py  test_connections.py  test_errors.py  test_heat_pump_exergy.py  test_heat_pump_model.py
tests_friederike/: tests.py
tutorial/: NH3.py  NH3_calculations.py  R410A.py  R410A_calculations.py  README.rst  binary_mixtures.py  optimization_example.py  plots.py  step_1.py  step_2.py  step_3.py
(+523 files in other folders)
