[tool.poetry]
name = "tespy"
version = "0.7.3"
description = "Thermal Engineering Systems in Python (TESPy)"
readme = "README.rst"
authors = [
    {name = "Francesco Witte", email = "tespy@witte.sh"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.9"
dependencies = [
    "CoolProp>=6.6,<7",
    "jinja2",
    "matplotlib>=3.2.1,<4",
    "numpy>=1.13.3,<2",
    "pandas>=1.3.0,<3",
    "tabulate>=0.8.2,<0.9",
]
license = {text = "MIT"}

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
tabulate = "^0.9.0"

[tool.poetry.group.coolprop.dependencies]
cython = "^0.29.35"
setuptools = "^67.8.0"
wheel = "^0.40.0"
requests = "^2.31.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = [
    "poetry-core",
    "setuptools>=30.3.0",
    "wheel",
    "setuptools_scm>=3.3.1",
]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\"*.rst\"
    --tb=short
    --pyargs
    --ignore=docs/conf.py
    --ignore=docs/scripts
"""
testpaths = [
    "src/",
    "tests/",
    "docs/",
]

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "tespy"
default_section = "THIRDPARTY"
forced_separate = "test_tespy"
skip = "migrations"

[tool.coverage.run]
branch = true
source = ["src"]
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
omit = ["migrations"]
