[tool.poetry]
name = "tespy"
version = "0.1.0"
description = ""
authors = ["mrk <mrk@ipu.dk>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
matplotlib = "^3.7.2"
pandas = "^2.0.3"
tabulate = "^0.9.0"
coolprop = "^6.6.0"

[tool.poetry.group.coolprop.dependencies]
cython = "^0.29.35"
setuptools = "^67.8.0"
wheel = "^0.40.0"
requests = "^2.31.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = [
    "poetry-core",
    "setuptools>=30.3.0",
    "wheel",
    "setuptools_scm>=3.3.1",
]
build-backend = "poetry.core.masonry.api"
