[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
include = [
    "CHANGELOG.rst",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "LICENSE*",
    "PULL_REQUEST_TEMPLATE.md",
    ".coveragerc",
    ".editorconfig",
    ".pep8speaks.yml",
    ".readthedocs.yml",
    "paper.bib",
    "paper.md",
    "tox.ini",
    "docs/",
    "tests/",
    "tutorial/",
]
exclude = ["docs/_build"]

[project]
name = "tespy"
version = "0.8.2.dev0"
description = "Thermal Engineering Systems in Python (TESPy)"
readme = "README.rst"
authors = [
    {name = "Francesco Witte", email = "tespy@witte.sh"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "CoolProp>=6.8",
    "jinja2",
    "matplotlib>=3.2.1",
    "numpy>=1.13.3",
    "pandas>=1.3.0",
    "scipy",
    "tabulate>=0.8.2",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/oemof/tespy"
Documentation = "https://tespy.readthedocs.io/"
Changelog = "https://tespy.readthedocs.io/en/main/whats_new.html"
"Issue Tracker" = "https://github.com/oemof/tespy/issues"

[project.optional-dependencies]
dev = [
    "build",
    "flit",
    "fluprodia",
    "furo",
    "iapws",
    "pyromat",
    "pytest",
    "sphinx>=7.2.2",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxcontrib.bibtex",
    "tox",
]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = """
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\"*.rst\"
    --tb=short
    --pyargs
    --ignore=docs/conf.py
    --ignore=docs/scripts
    --ignore=docs/_build
"""
testpaths = [
    "src/",
    "tests/",
    "docs/",
]

[tool.isort]
force_single_line = true
line_length = 120
known_first_party = "tespy"
default_section = "THIRDPARTY"
forced_separate = "test_tespy"
skip = "migrations"

[tool.coverage.run]
branch = true
source = ["src"]
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
omit = ["migrations"]
