[bdist_wheel]
universal = 1

[flake8]
max-line-length = 140
exclude = */migrations/*, docs/conf.py

[metadata]
description_file = README.rst

[options]
tests_require = pytest

[aliases]
test = pytest

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
    --pyargs
testpaths =
    tespy
    tests/

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = tespy
default_section = THIRDPARTY
forced_separate = test_tespy
not_skip = __init__.py
skip = migrations

[matrix]

python_versions =
    py37
    py38
    py39
    py310

coverage_flags =
    cover: true
    nocov: false

environment_variables =
    -
